git-annex (5.20140607) UNRELEASED; urgency=medium

  * Ignore setsid failures.

 -- Joey Hess <joeyh@debian.org>  Mon, 09 Jun 2014 14:44:09 -0400

git-annex (5.20140606) unstable; urgency=medium

  * webapp: When adding a new local repository, fix bug that caused its
    group and preferred content to be set in the current repository,
    even when not combining.
  * webapp: Avoid stomping on existing description, group and
    preferred content settings when enabling or combining with
    an already existing remote.
  * assistant: Make sanity checker tmp dir cleanup code more robust.
  * unused: Avoid checking view branches for unused files.
  * webapp: Include ssh port in mangled hostname.
  * Windows: Fix bug introduced in last release that caused files
    in the git-annex branch to have lines teminated with \r.
  * Windows: Fix retrieving of files from local bare git repositories.

 -- Joey Hess <joeyh@debian.org>  Fri, 06 Jun 2014 12:54:06 -0400

git-annex (5.20140529) unstable; urgency=medium

  * Fix encoding of data written to git-annex branch. Avoid truncating
    unicode characters to 8 bits. Allow any encoding to be used, as with
    filenames (but utf8 is the sane choice). Affects metadata and repository
    descriptions, and preferred content expressions.
  * assistant: When there are multiple remotes giving different ways
    to access the same repository, honor remote cost settings and use
    the cheapest available.
  * webapp: More robust startup when annex directory is not a git repo.
  * initremote/enableremote: Basic support for using with regular git remotes;
    initremote stores the location of an already existing git remote,
    and enableremote setups up a remote using its stored location.
  * webapp: Support for enabling known git repositories on ssh servers.
    The repository must have been added using initremote.
  * webapp: When setting up a ssh remote, record it using initremote,
    so that it can be easily enabled elsewhere.