@@ -7,3 +7,6 @@ These files should be removed when import detects that its has no more space to 
 ### What version of git-annex are you using? On what operating system?
 
 git-annex 5.20140517.4 in Ubuntu 12.04.
+
+> The ".tmp" means this dropping is left by viaTmp, and I see why.
+> [[fixed|done]] --[[Joey]]
