@@ -1,6 +1,8 @@
 git-annex (5.20140607) UNRELEASED; urgency=medium
 
   * Ignore setsid failures.
+  * Avoid leaving behind .tmp files when failing in some cases, including
+    importing files to a disk that is full.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 09 Jun 2014 14:44:09 -0400
 
